# miami-resources

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
gov/: compliance.md  one-pager.md  proposal.md
miami_resources/: agent.py
miami_resources/agents/: education.py  food.py  healthcare.py  housing.py  jobs.py
miami_resources/data/: programs.py
miami_resources/tools/: lookup.py
web/: app.js  index.html  style.css
