[project]
name = "miami-resources"
version = "1.0.0"
description = "Free multilingual AI assistant helping Miami-Dade residents find housing, food, healthcare, jobs & education"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Matthew Karsten", email = "MatthewKarstenConnects@gmail.com" }]

dependencies = [
    "google-adk>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
